[package]
name = "algosdk"
version = "0.1.0"
authors = ["mraof <mraof@mraof.com>","Kwame Bryan <kwame.bryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "0.3.4"
sha2 = "0.8.0"
rand = "0.7.2"
ring = "0.16.9"
data-encoding = "2.1.2"
rmp = "0.8.8"
rmp-serde = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.40"
reqwest = "0.9.20"
async-trait = "0.1.42" # This is currently required to properly initialize the world in cucumber-rust
futures = "0.3.8" # You can use a different executor if you wish
gherkin_rust = "^0.8"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
dirs = "2.0"
chrono = "0.4.9"
